Fix overflow style

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ body
 	margin:0 15px 0 200px;
 	position:relative;
 	right:100%;
-	overflow:hidden;
 	padding: 8px;
 }
 .leftmenu .col2 
